--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.9.3+build.207
 
 # Mod Properties
-	mod_version = 1.1.3
+	mod_version = 1.1.3-TaxFreeLevels
 	maven_group = de.martenschaefer.grind-enchantments
 	archives_base_name = grind-enchantments
 
 # Dependencies
-	fairenchanting_version=master-SNAPSHOT
+	tax_free_levels_version=1.16-SNAPSHOT
